building logical plans from SPARQL queries should be possible (untested)
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@8927 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: c39a931a824c4165a11c05436b1b6c4b1ac05263